fix[TN-13-20]: fixed colors of  btn text, block title, header nav on mobile, search input on mobile

--- a/apps/block_scout_web/assets/css/components/_card.scss
+++ b/apps/block_scout_web/assets/css/components/_card.scss
@@ -63,6 +63,7 @@ $card-tab-icon-color-active: #fff !default;
   @media (max-width: 430px) {
     font-size: 28px;
     line-height: 28px;
+    margin-bottom: 20px;
   }
 
   &.lg-card-title {
