--- a/apps/block_scout_web/assets/css/components/_pagination_container.scss
+++ b/apps/block_scout_web/assets/css/components/_pagination_container.scss
@@ -1,6 +1,6 @@
 $pagination-page-link-background: #f5f6fa !default;
 $pagination-page-link-color: #a3a9b5 !default;
-$pagination-page-link-background-active: $primary !default;
+$pagination-page-link-background-active: #5B68DF !default;
 $pagination-page-link-color-active: #fff !default;
 
 @mixin pagination-container-base($background-color, $text-color) {
