--- a/apps/block_scout_web/assets/css/components/_search.scss
+++ b/apps/block_scout_web/assets/css/components/_search.scss
@@ -27,6 +27,9 @@
 
 .autoComplete_wrapper {
     width: 100% !important;
+    @media (max-width: 992px) {
+        margin-top: 7px;
+    }
 }
 
 .main-search-autocomplete {
